terraform/environments/cloud-platform/cluster-components/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  namespace: envoy-test-app
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: 557395370360.dkr.ecr.eu-west-2.amazonaws.com/cloud-platform/container-platform-terraform-starter-pack:1.1.1
          imagePullPolicy: Always
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
