terraform/environments/cloud-platform/cluster-components/manifests/envoy-alb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-alb
  namespace: envoy-gateway-system
spec:
  type: ClusterIP
  selector:
    gateway.envoyproxy.io/owning-gateway-name: eg
    gateway.envoyproxy.io/owning-gateway-namespace: default
  ports:
    - name: http
      port: 80
      targetPort: 10080
      protocol: TCP
