terraform/environments/cloud-platform/cluster-components/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: envoy-test-app
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
