terraform/environments/cloud-platform/cluster-components/manifests/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-app-route
  namespace: envoy-test-app
spec:
  hostnames:
    - nlb-envoy-demo.cp-1606-0845.development.container-platform.service.justice.gov.uk
  parentRefs:
    - name: eg
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: hello-world-service
          port: 8080
          weight: 1
